# typeshare-java

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: config.rs  error.rs  language.rs  lib.rs  main.rs
src/test/: integration.rs  typeshare.toml
src/test/fixtures/can_generate_algebraic_enum/: output.java
src/test/fixtures/can_generate_bare_string_enum/: output.java
src/test/fixtures/can_generate_double_option_pattern/: output.java
src/test/fixtures/can_generate_simple_enum/: output.java
src/test/fixtures/can_generate_simple_struct_with_a_comment/: output.java
src/test/fixtures/can_generate_slice_of_user_type/: output.java
src/test/fixtures/can_generate_struct_with_skipped_fields/: output.java
src/test/fixtures/can_generate_unit_structs/: output.java
src/test/fixtures/can_handle_quote_in_serde_rename/: output.java
src/test/fixtures/can_handle_serde_rename_all/: output.java
src/test/fixtures/can_handle_serde_rename_on_top_level/: output.java
src/test/fixtures/can_recognize_types_inside_modules/: output.java
src/test/fixtures/const_enum_decorator/: input.rs  output.java
src/test/fixtures/enum_is_properly_named_with_serde_overrides/: output.java
src/test/fixtures/generate_types/: output.java
src/test/fixtures/generates_empty_structs_and_initializers/: output.java
src/test/fixtures/invalid_decorator_annotations_error/: stderr
src/test/fixtures/kebab_case_rename/: output.java
src/test/fixtures/orders_types/: output.java
src/util/: indented_writer.rs  mod.rs
tests/: integration.rs  typeshare.toml
(+34 files in other folders)
