[package]
name = "typeshare-java"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
convert_case = "0.8.0"
fixtures = "0.1.0"
itertools = "0.14.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
typeshare-driver = "1.2.1"
typeshare-model = "2.0.1"
