[package]
name = "typeshare-java"
version = "0.6.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Typeshare CLI for generating Java types"
repository = "https://github.com/bcheidemann/typeshare-java"
homepage = "https://github.com/bcheidemann/typeshare-java"

[dependencies]
anyhow = "1.0.98"
convert_case = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
typeshare-driver = "1.2.1"
typeshare-model = "2.0.1"
assert_cmd = "2.0.17"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"

[dev-dependencies]
fixtures = "1"

[build-dependencies]
fixtures = "1"
